--- a/usuario/templates/carteira.html
+++ b/usuario/templates/carteira.html
@@ -24,12 +24,15 @@
         {% comment %} CARTEIRA {% endcomment %}
         <div class="card-body">
             <!-- APELIDO -->
-            <div class="form-group">
-                <i class="fas fa-wallet"></i>
-                <label for="exampleInputEmail1">Seu saldo é:</label>
-                <label for="saldo">R$ {{ saldo }}</label>
+            <div class="info-box">
+                <span class="info-box-icon bg-info"><i class="fas fa-wallet"></i></span>
+
+                <div class="info-box-content">
+                    <span class="info-box-text">Seu saldo é de:</span>
+                    <span class="info-box-number">R$ {{ saldo }}</span>
+                </div>
             </div>
-            <a href="{% url 'comprar' %}" class="btn btn-outline-info">Comprar mair créditos.</a>
+            <a href="{% url 'comprar' %}" class="btn btn-outline-info text-center">Comprar mair créditos.</a>
         </div>
 
         
