--- a/usuario/templates/veiculo.html
+++ b/usuario/templates/veiculo.html
@@ -57,7 +57,7 @@
         </form>
 
         {% comment %} TABELA {% endcomment %}
-        <div class="card-footer">
+        <div class="">
             <table id="table" class="table table-hover">
                 <thead>
                     <tr>
