--- a/usuario/templates/notificacoes.html
+++ b/usuario/templates/notificacoes.html
@@ -58,7 +58,7 @@
                 "paging": true,
                 "lengthChange": false,
                 "searching": true,
-                "ordering": true,
+                "ordering": false,
                 "info": true,
                 "autoWidth": false,
                 "cell-border": false,
