--- a/usuario/templates/home.html
+++ b/usuario/templates/home.html
@@ -11,7 +11,81 @@
 
 {% comment %} BLOCO DO CORPO DO HTML {% endcomment %}
 {% block body %}
-
+<div class="card card-solid card-outline">
+    <div class="card-body box-profile">
+        <div class="row">
+            <p class="p-1 m-1 text-dark">Olá, {{ user.first_name }}.</p>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="small-box bg-info">
+                    <div class="inner" style="height: 100px;">
+                        <h4>Precisa de ajuda?</h4>
+                    </div>
+                    <div class="icon">
+                        <i class="fas fa-question"></i>
+                    </div>
+                    <a href="{% url 'info' %}" class="small-box-footer">
+                       Clique aqui <i class="fas fa-arrow-circle-right"></i>
+                    </a>
+                </div>
+            </div>
+            
+            <div class="col-4">
+                <div class="small-box bg-green">
+                    <div class="inner" style="height: 100px;">
+                        <h5>Deseja comprar mais créditos?</h5>
+                    </div>
+                    <div class="icon">
+                        <i class="fas fa-question"></i>
+                    </div>
+                    <a href="{% url 'comprar' %}" class="small-box-footer">
+                       Clique aqui <i class="fas fa-arrow-circle-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <p class="p-1 m-1 text-dark">Como estacionar?</p>
+        </div>
+        <div class="row">
+            <div class="col-2 text-center">
+                <a href="{% url 'perfil' %}">
+                    <i class="icon-tutorial fas fa-user-plus fa-5x"></i>
+                    <p class="text-secondary">Complete seu cadastro</p>
+                </a>
+            </div>
+            <div class="col-1 text-center">
+                <i class="icon-tutorial-arrow fas fa-arrow-right fa-3x"></i>
+            </div>
+            <div class="col-2 text-center">
+                <a href="{% url 'comprar' %}">
+                    <i class="icon-tutorial fas fa-money-check fa-5x"></i>
+                    <p class="text-secondary">Compre créditos</p>
+                </a>
+            </div>
+            <div class="col-1 text-center">
+                <i class="icon-tutorial-arrow fas fa-arrow-right fa-3x"></i>
+            </div>
+            <div class="col-2 text-center">
+                <a href="{% url 'veiculo' %}">
+                    <i class="icon-tutorial fas fa-car fa-5x"></i>
+                    <p class="text-secondary">Adicione seu veículo</p>
+                </a>
+            </div>
+            <div class="col-1 text-center">
+                <i class="icon-tutorial-arrow fas fa-arrow-right fa-3x"></i>
+            </div>
+            <div class="col-2 text-center">
+                <a href="{% url 'estacionar' %}">
+                    <i class="icon-tutorial fas fa-parking fa-5x"></i>
+                    <p class="text-secondary">Estacione</p>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% comment %} BLOCO DE SCPRITS {% endcomment %}
